Updated hiera path config to be dynamic based on facter and run_puppet_apply

--- a/manifests/hiera.yaml
+++ b/manifests/hiera.yaml
@@ -7,10 +7,10 @@
   - common
 
 :backends:
-  - yaml 
+  - yaml
   - json
 
 :json: &data_dir
-  :datadir: "%{::puppet_cwd}/manifests/config"
+  :datadir: "%{::hiera_config}/"
 
 :yaml: *data_dir
