Adding support for up to 7 levels of subdomain granularity

--- a/manifests/hiera.yaml
+++ b/manifests/hiera.yaml
@@ -2,7 +2,13 @@
 :hierarchy:
   - "hosts/%{::fqdn}"
   - "roles/%{::hostname}"
-  - "domains/%{::domain}"
+  - "domains/%{::domain7}.%{::domain6}.%{::domain5}.%{::domain4}.%{::domain3}.%{::domain2}.%{::domain1}"
+  - "domains/%{::domain6}.%{::domain5}.%{::domain4}.%{::domain3}.%{::domain2}.%{::domain1}"
+  - "domains/%{::domain5}.%{::domain4}.%{::domain3}.%{::domain2}.%{::domain1}"
+  - "domains/%{::domain4}.%{::domain3}.%{::domain2}.%{::domain1}"
+  - "domains/%{::domain3}.%{::domain2}.%{::domain1}"
+  - "domains/%{::domain2}.%{::domain1}"
+  - "domains/%{::domain1}"
   - project
   - common
 
@@ -14,3 +20,4 @@
   :datadir: "%{::hiera_config}/"
 
 :yaml: *data_dir
+
