Fixed parameters for timezone module

--- a/manifests/config/common.yaml
+++ b/manifests/config/common.yaml
@@ -6,7 +6,8 @@
     - "timezone"
     - "user_account"
   general::ensure: "latest"
-  timezone::timezone: "US/Central"
+  timezone::region: "US"
+  timezone::locality: "Central"
   user_account::users:
     - "root"
 
